--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         content="Browser Miner - Mine cryptocurrency directly in your browser. No installations or downloads required. Start mining now!">
     <meta name="keywords"
         content="browser miner, cryptocurrency, mining, browser-based mining, crypto, digital currency, blockchain, decentralized, earn cryptocurrency, passive income, online mining, web mining">
-    <meta name="author" content="Malphite Mining">
+    <meta name="author" content="Jawara Code">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Browser Miner - Mine cryptocurrency directly in your browser">
     <meta property="og:description"
@@ -29,7 +29,7 @@
     <link href="css/app.e34bce41.css" rel="stylesheet">
 </head>
 
-<body><noscript><strong>We're sorry but malphite-webminer doesn't work properly without JavaScript enabled. Please
+<body><noscript><strong>We're sorry but jawaracode-webminer doesn't work properly without JavaScript enabled. Please
             enable it to continue.</strong></noscript>
     <div id="app"></div>
 </body>
