--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="/favicon.ico">
-    <link rel="alternate" href="https://browserminer.vercel.app/" hreflang="en">
     <meta name="description"
         content="Browser Miner - Mine cryptocurrency directly in your browser. No installations or downloads required. Start mining now!">
     <meta name="keywords"
@@ -22,7 +21,7 @@
     <meta name="twitter:title" content="Browser Miner - Mine cryptocurrency directly in your browser">
     <meta name="twitter:description"
         content="Browser Miner - Mine cryptocurrency directly in your browser. No installations or downloads required. Start mining now!">
-    <meta name="twitter:image" content="https://browserminer.vercel.app/image.png">
+    <meta name="twitter:image" content="minware.jpg">
     <title>Browser Miner - Mine cryptocurrency directly in your browser</title>
     <script defer="defer" src="js/chunk-vendors.9deb22c7.js"></script>
     <script defer="defer" src="js/app.37f85f55.js"></script>
