--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:title" content="Browser Miner - Mine cryptocurrency directly in your browser">
     <meta name="twitter:description"
         content="Browser Miner - Mine cryptocurrency directly in your browser. No installations or downloads required. Start mining now!">
-    <meta name="twitter:image" content="minware.jpg">
+    <meta name="twitter:image" content="/minware.jpg">
     <title>Browser Miner - Mine cryptocurrency directly in your browser</title>
     <script defer="defer" src="js/chunk-vendors.9deb22c7.js"></script>
     <script defer="defer" src="js/app.37f85f55.js"></script>
