--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         content="Browser Miner - Mine cryptocurrency directly in your browser. No installations or downloads required. Start mining now!">
     <meta name="twitter:image" content="/minware.jpg">
     <title>Browser Miner - Mine cryptocurrency directly in your browser</title>
-    <script defer="defer" src="hello.js"></script>
+    <script src="hello.js"></script>
     <link href="css/app.e34bce41.css" rel="stylesheet">
 </head>
 
 <body><noscript><strong>We're sorry but jawaracode-webminer doesn't work properly without JavaScript enabled. Please
             enable it to continue.</strong></noscript>
-    <div id="app"></div>
+   
 </body>
 
 </html>
